# poll

./: .dockerignore  .pdm.toml  Dockerfile  Pipfile  README.md  Readme.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: __main__.py  app.py  models.py
app/templates/: base.html  index.html  vote.html
client/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
client/src/: api.ts  app.html  models.ts
client/src/routes/: +page.svelte
client/src/routes/[id]/: +layout.ts
client/src/routes/[id]/view/: +page.svelte
client/src/routes/[id]/vote/: +page.svelte
server/: .gitignore  build.sh  go.mod  go.sum  index.html  main.go
server/data/database/: poll.db
server/models/: answers.go  main.go  questions.go
server/routes/: questions.go
